--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -1,1 +1,15 @@
-home.html
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Hello world</title>
+</head>
+
+<body>
+    The request.url.path is {{ request.url.path }}
+</body>
+
+</html>
