auto load module

--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    The request.url.path is {{ request.url.path }}
+    The request.url.path is {{ request.url.path }}.<br />
+    DB settings is {{ db }}
 </body>
 
 </html>
