--- a/example/templates/home.html
+++ b/example/templates/home.html
@@ -10,7 +10,8 @@
 
 <body>
     The request.url.path is {{ request.url.path }}.<br />
-    DB settings is {{ db }}
+    DB settings is {{ db }}.<br />
+    Hello, {{ name }}.
 </body>
 
 </html>
