--- a/kui/openapi/templates/redoc.html
+++ b/kui/openapi/templates/redoc.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>OpenAPI power by Xīng</title>
+    <title>OpenAPI power by Kuí</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
