--- a/kui/openapi/templates/swagger.html
+++ b/kui/openapi/templates/swagger.html
@@ -3,7 +3,7 @@
 
 <head>
     <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.30.0/swagger-ui.css">
-    <title>OpenAPI power by Xīng</title>
+    <title>OpenAPI power by Kuí</title>
 </head>
 
 <body>
