chore: Update Swagger UI version to 5.11.0

--- a/kui/openapi/templates/swagger.html
+++ b/kui/openapi/templates/swagger.html
@@ -2,13 +2,14 @@
 <html>
 
 <head>
-    <link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.30.0/swagger-ui.css">
+    <link type="text/css" rel="stylesheet" href="//unpkg.com/swagger-editor@5.0.0-alpha.86/dist/swagger-editor.css">
     <title>OpenAPI power by Kuí</title>
 </head>
 
 <body>
     <div id="swagger-ui"></div>
-    <script src="https://cdn.jsdelivr.net/npm/swagger-ui-dist@3.48.0/swagger-ui-bundle.js"></script>
+    <script src="//unpkg.com/swagger-ui-dist@5.11.0/swagger-ui-bundle.js"></script>
+    <script src="//unpkg.com/swagger-ui-dist@5.11.0/swagger-ui-standalone-preset.js"></script>
     <script>
         const loadSwagger = (spec) => {
             SwaggerUIBundle({
